# rustcracker

./: .env  .env.example  .gitignore  CHANGELOD.md  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: command.rs  config.rs  database.rs  firecracker.rs  hplog.rs  hypervisor.rs  jailer.rs  lib.rs  local.rs  machine.rs  machine_dev.rs  machine_pool.rs  main.rs  micro_http.rs  options.rs  pool.rs  raii.rs  ser.rs  sync.rs  sync_hypervisor.rs  utils.rs
src/agent/: agent.rs  mod.rs  sync.rs  sync_agent.rs  tokio.rs
src/client/: agent.rs  command_builder.rs  connection_pool.rs  firecracker.rs  firecracker_client.rs  handler.rs  handlers.rs  handlers_wasted.rs  http_client.rs  jailer.rs  machine.rs  mod.rs  network.rs
src/components/: agent.rs  command_builder.rs  handler.rs  jailer.rs  machine.rs  mod.rs  network.rs  signals.rs
src/demo/: data.rs  mod.rs
src/error/: mod.rs
src/events/: events.rs  events_async.rs  mod.rs
src/firecracker/: mod.rs  sync.rs  tokio.rs
src/hypervisor/: mod.rs  sync.rs  tokio.rs
src/instance/: firecracker.rs  jailer.rs  mod.rs
src/io/: buf.rs  decode.rs  encode.rs  mod.rs
src/jailer/: mod.rs  sync.rs  tokio.rs
src/micro_http/: back.rs  body.rs  connection.rs  encoding.rs  error.rs  header.rs  media_type.rs  method.rs  mod.rs  request.rs  response.rs  server.rs  version.rs
src/model/: balloon.rs  balloon_stats.rs  balloon_stats_update.rs  balloon_update.rs  boot_args.rs  boot_source.rs  cpu_template.rs  drive.rs  entropy_device.rs  error.rs  firecracker_version.rs  full_vm_configuration.rs  instance_action_info.rs  instance_info.rs  kernel_args.rs  logger.rs  machine_configuration.rs  memory_backend.rs  metrics.rs  mmds_config.rs  mod.rs  network_interface.rs  partial_drive.rs  partial_network_interface.rs  rate_limiter.rs  snapshot_create_params.rs  snapshot_load_params.rs  token_bucket.rs  vm.rs  vsock.rs
src/models/: balloon.rs  balloon_stats.rs  balloon_stats_update.rs  balloon_update.rs  boot_source.rs  cpu_template.rs  drive.rs  entropy_device.rs  error.rs  firecracker_version.rs  full_vm_configuration.rs  instance_action_info.rs  instance_info.rs  kernel_args.rs  logger.rs  machine_configuration.rs  memory_backend.rs  metrics.rs  mmds_config.rs  mod.rs  network_interface.rs  partial_drive.rs  partial_network_interface.rs  rate_limiter.rs  snapshot_create_params.rs  snapshot_load_params.rs  token_bucket.rs  vm.rs  vsock.rs
src/net/: mod.rs
src/operations/: get_machine_configuration.rs  mod.rs  operation.rs
src/ops_res/: create_snapshot.rs  create_sync_action.rs  describe_balloon_config.rs  describe_balloon_stats.rs  describe_instance.rs  get_export_vm_config.rs  get_firecracker_version.rs  get_machine_configuration.rs  get_mmds.rs  load_snapshot.rs  mod.rs  (+19 more)
tests/: basic.rs  benchmark_test.rs  machine_test.rs
(+41 files in other folders)
