[package]
name = "rustcracker"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.3.1", features = ["client"] }
bufstream = { version = "0.1.4", features = ["tokio"] }
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
async-trait = "0.1.80"
either = { version = "1.12.0", features = ["serde"] }
parking_lot = { version = "0.12.2", features = ["owning_ref"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.crossbeam]
version = "0.8.4"
features = [
    "crossbeam-channel",
    "crossbeam-deque",
    "crossbeam-epoch",
    "crossbeam-queue",
]

[dependencies.env_logger]
version = "0.11.3"

[dependencies.serde]
version = "1.0.200"
features = ["serde_derive"]

[dependencies.serde_json]
version = "1.0.116"
