[package]
name = "rustcracker"
version = "2.0.0"
edition = "2021"


[dependencies]
log = { version = "0.4.21", features = ["kv_serde"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
async-trait = "0.1.80"
diesel = "2.1.6"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.9.1", features = ["v4", "fast-rng"] }
fslock = "0.2.1"
httparse = "1.9.4"
either = "1.13.0"
paste = "1.0.15"
procfs = "0.16.0"
nix = { version = "0.29.0", features = ["signal", "mount", "fs", "user"]}
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
event-listener = "5.3.1"
future-utils = "0.12.1"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
env_logger = "0.11.3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
