[package]
name = "rustcracker"
version = "2.0.0"
edition = "2021"


[dependencies]
log = { version = "0.4", features = ["kv_serde"] }
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
# diesel = "2.2"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.13", features = ["v4", "fast-rng"] }
# fslock = "0.2.1"
httparse = "1.10"
either = "1.13.0"
paste = "1.0.15"
nix = { version = "0.29.0", features = ["signal", "mount", "fs", "user"] }
# crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
# event-listener = "5.3.1"
future-utils = "0.12.1"
dotenvy = "0.15.7"
# lazy_static = "1.5.0"
# fs2 = "0.4.3"
log4rs = { version = "1.3.0", features = ["console_appender", "file_appender"] }
bytes = "1.10.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
